SERVER-45925 Disable incremental_backup_cursor.js temporarily

--- a/buildscripts/resmokeconfig/suites/no_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/no_passthrough.yml
@@ -10,8 +10,9 @@ selector:
   exclude_files:
   # Disable inmem_full as per SERVER-27014
   - jstests/noPassthrough/inmem_full.js
-  # TODO(SERVER-45821): enable backup_cursor_format.js
+  # TODO(SERVER-45821): enable backup_cursor_format.js and incremental_backup_cursor.js
   - src/mongo/db/modules/*/jstests/hot_backups/backup_cursor_format.js
+  - src/mongo/db/modules/*/jstests/hot_backups/incremental_backup_cursor.js
 
 # noPassthrough tests start their own mongod's.
 executor:
