--- a/src/mongo/util/SConscript
+++ b/src/mongo/util/SConscript
@@ -571,6 +571,7 @@ icuEnv.CppUnitTest(
         'hierarchical_acquisition_test.cpp',
         'icu_test.cpp',
         'invalidating_lru_cache_test.cpp',
+        'interruptible_test.cpp',
         'itoa_test.cpp',
         'latch_analyzer_test.cpp',
         'lockable_adapter_test.cpp',
