--- a/src/mongo/config.h.in
+++ b/src/mongo/config.h.in
@@ -92,5 +92,8 @@
 // Defined if using libunwind.
 @mongo_config_use_libunwind@
 
+// Defined if raw latches are enabled
+@mongo_config_use_raw_latches@
+
 // Defined if WiredTiger storage engine is enabled
 @mongo_config_wiredtiger_enabled@
