SERVER-45904 Create a standalone collection sharding state factory
 create mode 100644 src/mongo/db/s/collection_sharding_state_factory_shard.h
 create mode 100644 src/mongo/db/s/collection_sharding_state_factory_standalone.cpp
 create mode 100644 src/mongo/db/s/collection_sharding_state_factory_standalone.h

--- a/src/mongo/db/s/SConscript
+++ b/src/mongo/db/s/SConscript
@@ -40,6 +40,7 @@ env.Library(
         'chunk_splitter.cpp',
         'collection_sharding_runtime.cpp',
         'collection_sharding_state_factory_shard.cpp',
+        'collection_sharding_state_factory_standalone.cpp',
         'config_server_op_observer.cpp',
         'implicit_create_collection.cpp',
         'metadata_manager.cpp',
