--- a/buildscripts/resmokeconfig/suites/sharded_collections_causally_consistent_jscore_txns_passthrough.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_collections_causally_consistent_jscore_txns_passthrough.yml
@@ -29,7 +29,9 @@ selector:
   # attached to statements in a transaction beyond the first one.
   - jstests/core/txns/non_transactional_operations_on_session_with_transaction.js
 
-  # TODO(SERVER-45368) re-enable once collection creation is permitted in cross-shard transactions.
+  # These workloads explicitly create collections inside multi-document transactions. These are
+  # non-idempotent operations, and the implicit collection sharding logic upon collection access
+  # results in premature collection creation, causing the workloads to fail.
   - jstests/core/txns/create_collection.js
   - jstests/core/txns/create_collection_parallel.js
   - jstests/core/txns/create_indexes.js
