--- a/buildscripts/resmokeconfig/suites/sharded_jscore_txns_sharded_collections.yml
+++ b/buildscripts/resmokeconfig/suites/sharded_jscore_txns_sharded_collections.yml
@@ -25,7 +25,9 @@ selector:
   # View tests aren't expected to work when collections are implicitly sharded.
   - jstests/core/txns/view_reads_in_transaction.js
 
-  # TODO(SERVER-45368) re-enable once collection creation is permitted in cross-shard transactions.
+  # These workloads explicitly create collections inside multi-document transactions. These are
+  # non-idempotent operations, and the implicit collection sharding logic upon collection access
+  # results in premature collection creation, causing the workloads to fail.
   - jstests/core/txns/create_collection.js
   - jstests/core/txns/create_collection_parallel.js
   - jstests/core/txns/create_indexes.js
