SERVER-44851 Constrain commit points for model-checking.

--- a/src/mongo/db/repl/tla_plus/MongoReplReconfig/MCMongoReplReconfig.cfg
+++ b/src/mongo/db/repl/tla_plus/MongoReplReconfig/MCMongoReplReconfig.cfg
@@ -20,6 +20,9 @@ MaxTerm = 3
 \* The number of reconfigs allowed during model-checking.
 MaxConfigVersion = 3
 
+\* The number of commit points advanced during model-checking.
+MaxCommittedEntries = 3
+
 \* Constrain the model to be finite and leverage the symmetry to reduce
 \* the state space.
 \* Symmetry checking may invalidate liveness checking in certain cases.
